# ros_project

./: LICENSE  README.md
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
install/hri_signals/share/hri_signals/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hri_signals_interfaces/share/hri_signals_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hri_signals_interfaces/share/hri_signals_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_hri_signals_interfaces__rosidl_generator_cExport-noconfig.cmake  export_hri_signals_interfaces__rosidl_generator_cExport.cmake  export_hri_signals_interfaces__rosidl_generator_cppExport.cmake  export_hri_signals_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_hri_signals_interfaces__rosidl_generator_pyExport.cmake  export_hri_signals_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_hri_signals_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_hri_signals_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  (+13 more)
log/: latest_build  latest_version-check
src/hri_signals/: setup.cfg  setup.py
src/hri_signals/hri_signals/: human_signal_pub.py  robot_action_sub.py
src/hri_signals_interfaces/: CMakeLists.txt  package.xml
src/hri_signals_interfaces/msg/: HumanSignal.msg
(+23 files in other folders)
