<?xml version="1.0"?>
<package format="3">
  <name>hri_signals_interfaces</name>
  <version>0.0.0</version>
  <description>Message definitions for HRI signals</description>

  <maintainer email="behomely0409@gmail.com">junibecky</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Needed to generate code from .msg -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Needed at runtime to use generated messages -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Group declaration: this is an interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Optional test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
